# fdk-mqa-property-checker

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: deploy-demo.yaml  deploy-prod&demo.yaml  deploy-prod.yaml  deploy-staging.yaml
deploy/base/: deployment-fdk-mqa-property-checker.yaml  kustomization.yaml  service-fdk-mqa-property-checker.yaml
deploy/demo/: env.yaml
deploy/prod/: env.yaml
deploy/staging/: env.yaml
src/: error.rs  kafka.rs  lib.rs  main.rs  metrics.rs  rdf.rs  reference_data.rs  schemas.rs  utils.rs  vocab.rs
tests/: integration_test.rs
tests/data/: dataset_event.ttl  mqa_event.ttl
