[package]
name = "fdk-mqa-property-checker"
version = "0.1.0"
edition = "2021"
authors = ["Jeff Reiffers <jeff@ouvir.no>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.10.2"
apache-avro = "0.18.0"
cached = { version = "0.55.1", features = ["async"] }
futures = "0.3"
http = "1.3.1"
httpmock = "0.7.0"
lazy_static = "1.5.0"
oxigraph = "0.4.9"
prometheus = "0.14.0"
rdkafka = "0.37.0"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
schema_registry_converter = { version = "4.4.0", features = ["avro", "blocking"] }
serde = "1.0.219"
serde_derive = "1.0.219"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber =  { version = "0.3.19", features = ["json", "env-filter", "tracing-log"] }
uuid = { version = "1.16.0", features = ["v4"] }

[dev-dependencies]
sophia_api= "0.9.0"
sophia_isomorphism = "0.9.0"
sophia_turtle = "0.9.0"
